[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/UGC/GUI/Game.gd" type="Script" id=1]

[sub_resource type="ButtonGroup" id=1]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1004.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Game"]
margin_right = 1004.0
margin_bottom = 14.0
text = "Game"
align = 1

[node name="UploadGamePCK" type="Button" parent="ScrollContainer/VBoxContainer/Game"]
margin_top = 18.0
margin_right = 1004.0
margin_bottom = 38.0
text = "UploadGamePCK"
align = 0

[node name="HBoxContainer11" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Game"]
margin_top = 42.0
margin_right = 1004.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Game/HBoxContainer11"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "PCKCID"

[node name="PCKCID" type="LineEdit" parent="ScrollContainer/VBoxContainer/Game/HBoxContainer11"]
margin_left = 104.0
margin_right = 1004.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
placeholder_text = "PCKCID"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer/Game"]
margin_top = 70.0
margin_right = 1004.0
margin_bottom = 74.0

[node name="Platform" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 1004.0
margin_bottom = 590.0

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/Platform"]
margin_right = 1004.0
margin_bottom = 14.0
text = "Platform"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Platform"]
margin_top = 18.0
margin_right = 1004.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Title"

[node name="Title" type="LineEdit" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer"]
margin_left = 104.0
margin_right = 1004.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
placeholder_text = "title"

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Platform"]
margin_top = 46.0
margin_right = 1004.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer2"]
margin_top = 3.0
margin_right = 100.0
margin_bottom = 17.0
rect_min_size = Vector2( 100, 0 )
text = "Type"

[node name="Type" type="OptionButton" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer2"]
margin_left = 104.0
margin_right = 304.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
disabled = true
text = "ETC"
align = 1
items = [ "ETC", null, false, 0, null, "FPS", null, false, 1, null, "SLG", null, false, 2, null, "RTS", null, false, 3, null, "AVG", null, false, 4, null, "RAC", null, false, 5, null, "ACT", null, false, 6, null, "SIM", null, false, 7, null, "EDU", null, false, 8, null, "FLY", null, false, 9, null, "TAB", null, false, 10, null, "SPG", null, false, 11, null, "FTG", null, false, 12, null, "PZL", null, false, 13, null, "STG", null, false, 14, null, "MUD", null, false, 15, null, "TCG", null, false, 16, null, "MSC", null, false, 17, null, "LVG", null, false, 18, null, "MMORPG", null, false, 19, null, "MOBA", null, false, 20, null, "RPG", null, false, 21, null ]
selected = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Platform"]
margin_top = 70.0
margin_right = 1004.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer3"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Icon"

[node name="Icon" type="LineEdit" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer3"]
margin_left = 104.0
margin_right = 949.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
placeholder_text = "Icon folder"

[node name="SelectFolder" type="Button" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer3"]
margin_left = 953.0
margin_right = 1004.0
margin_bottom = 24.0
disabled = true
text = "Select"

[node name="HBoxContainer4" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Platform"]
margin_top = 98.0
margin_right = 1004.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer4"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "BG"

[node name="BG" type="LineEdit" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer4"]
margin_left = 104.0
margin_right = 949.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
placeholder_text = "BG folder"

[node name="SelectFolder2" type="Button" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer4"]
margin_left = 953.0
margin_right = 1004.0
margin_bottom = 24.0
disabled = true
text = "Select"

[node name="HBoxContainer5" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Platform"]
margin_top = 126.0
margin_right = 1004.0
margin_bottom = 150.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer5"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Desc"

[node name="Desc" type="LineEdit" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer5"]
margin_left = 104.0
margin_right = 1004.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
placeholder_text = "Desc"

[node name="HBoxContainer6" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Platform"]
margin_top = 154.0
margin_right = 1004.0
margin_bottom = 234.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer6"]
margin_top = 33.0
margin_right = 100.0
margin_bottom = 47.0
rect_min_size = Vector2( 100, 0 )
text = "Price"

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer6"]
margin_left = 104.0
margin_right = 410.0
margin_bottom = 80.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer6/VBoxContainer"]
margin_right = 306.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer6/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
text = "everyone consumes energy"

[node name="EveryonePower" type="SpinBox" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer6/VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 278.0
margin_bottom = 24.0
editable = false

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer6/VBoxContainer/HBoxContainer"]
margin_left = 282.0
margin_right = 306.0
margin_bottom = 24.0
disabled = true
group = SubResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer6/VBoxContainer"]
margin_top = 28.0
margin_right = 306.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer6/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
text = "total entrance fee"

[node name="TotalEntranceFee" type="SpinBox" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer6/VBoxContainer/HBoxContainer2"]
margin_left = 204.0
margin_right = 278.0
margin_bottom = 24.0
editable = false

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer6/VBoxContainer/HBoxContainer2"]
margin_left = 282.0
margin_right = 306.0
margin_bottom = 24.0
disabled = true
group = SubResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer6/VBoxContainer"]
margin_top = 56.0
margin_right = 306.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer6/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 0 )
text = "free"

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer6/VBoxContainer/HBoxContainer3"]
margin_left = 282.0
margin_right = 306.0
margin_bottom = 24.0
size_flags_horizontal = 10
disabled = true
pressed = true
group = SubResource( 1 )

[node name="HBoxContainer7" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Platform"]
margin_top = 238.0
margin_right = 1004.0
margin_bottom = 456.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7"]
margin_top = 102.0
margin_right = 100.0
margin_bottom = 116.0
rect_min_size = Vector2( 100, 0 )
text = "Role"

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7"]
margin_left = 104.0
margin_right = 840.0
margin_bottom = 218.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer"]
margin_right = 736.0
margin_bottom = 70.0

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 70.0
disabled = true

[node name="PlayerName" type="LineEdit" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 23.0
margin_right = 128.0
margin_bottom = 47.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 6
editable = false
placeholder_text = "Player1"

[node name="InitDesc" type="TextEdit" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 432.0
margin_bottom = 70.0
rect_min_size = Vector2( 300, 70 )
text = "this game use defense,attack,hp"
readonly = true

[node name="UseDesc" type="TextEdit" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer"]
margin_left = 436.0
margin_right = 736.0
margin_bottom = 70.0
rect_min_size = Vector2( 300, 70 )
text = "Defense = {Defense}
Attack = {Attack}
HP = {HP}"
readonly = true

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer"]
margin_top = 74.0
margin_right = 736.0
margin_bottom = 144.0

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 70.0
disabled = true

[node name="PlayerName" type="LineEdit" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer2"]
margin_left = 28.0
margin_top = 23.0
margin_right = 128.0
margin_bottom = 47.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 6
editable = false
placeholder_text = "Player2"

[node name="InitDesc" type="TextEdit" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer2"]
margin_left = 132.0
margin_right = 432.0
margin_bottom = 70.0
rect_min_size = Vector2( 300, 70 )
text = "this game use defense,attack,hp"
readonly = true

[node name="UseDesc" type="TextEdit" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer2"]
margin_left = 436.0
margin_right = 736.0
margin_bottom = 70.0
rect_min_size = Vector2( 300, 70 )
text = "Defense = {Defense}
Attack = {Attack}
HP = {HP}"
readonly = true

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer"]
margin_top = 148.0
margin_right = 736.0
margin_bottom = 218.0

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer3"]
margin_right = 24.0
margin_bottom = 70.0
disabled = true

[node name="PlayerName" type="LineEdit" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer3"]
margin_left = 28.0
margin_top = 23.0
margin_right = 128.0
margin_bottom = 47.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 6
editable = false
placeholder_text = "Player3"

[node name="InitDesc" type="TextEdit" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer3"]
margin_left = 132.0
margin_right = 432.0
margin_bottom = 70.0
rect_min_size = Vector2( 300, 70 )
text = "this game use defense,attack,hp"
readonly = true

[node name="UseDesc" type="TextEdit" parent="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer3"]
margin_left = 436.0
margin_right = 736.0
margin_bottom = 70.0
rect_min_size = Vector2( 300, 70 )
text = "Defense = {Defense}
Attack = {Attack}
HP = {HP}"
readonly = true

[node name="SubmitInfo" type="Button" parent="ScrollContainer/VBoxContainer/Platform"]
margin_top = 460.0
margin_right = 1004.0
margin_bottom = 480.0
disabled = true
text = "SubmitInfo"
align = 0

[node name="ClearAll" type="Button" parent="ScrollContainer/VBoxContainer/Platform"]
margin_top = 484.0
margin_right = 1004.0
margin_bottom = 504.0
text = "ClearAll"
align = 0

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer/Platform"]
margin_top = 508.0
margin_right = 1004.0
margin_bottom = 512.0

[node name="IconFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -283.5
margin_top = -191.5
margin_right = 283.5
margin_bottom = 191.5
rect_min_size = Vector2( 300, 105 )
window_title = "打开文件"
mode = 0

[node name="BGFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -283.5
margin_top = -191.5
margin_right = 283.5
margin_bottom = 191.5
rect_min_size = Vector2( 300, 105 )
window_title = "打开文件"
mode = 0

[connection signal="pressed" from="ScrollContainer/VBoxContainer/Game/UploadGamePCK" to="." method="_on_UploadGamePCK_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Platform/HBoxContainer3/SelectFolder" to="." method="_on_Icon_SelectFolder_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Platform/HBoxContainer4/SelectFolder2" to="." method="_on_BG_SelectFolder_pressed"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_Player_CheckBox_toggled" binds= [ 0 ]]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer2/CheckBox" to="." method="_on_Player_CheckBox_toggled" binds= [ 1 ]]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/Platform/HBoxContainer7/VBoxContainer/HBoxContainer3/CheckBox" to="." method="_on_Player_CheckBox_toggled" binds= [ 2 ]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Platform/SubmitInfo" to="." method="_on_SubmitInfo_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Platform/ClearAll" to="." method="_on_ClearAll_pressed"]
[connection signal="file_selected" from="IconFileDialog" to="." method="_on_IconFileDialog_file_selected"]
[connection signal="file_selected" from="BGFileDialog" to="." method="_on_BGFileDialog_file_selected"]
